Kernel config updates

--- a/arch/arm/configs/tf700t_cm10_defconfig
+++ b/arch/arm/configs/tf700t_cm10_defconfig
@@ -21,13 +21,8 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_BLK_DEV_BSG is not set
-CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ARCH_TEGRA=y
 # CONFIG_GPIO_PCA953X is not set
 CONFIG_ARCH_TEGRA_3x_SOC=y
@@ -38,6 +33,7 @@ CONFIG_TEGRA_CLOCK_DEBUG_WRITE=y
 CONFIG_TEGRA_CONVSERVATIVE_GOV_ON_EARLYSUPSEND=y
 CONFIG_USB_HOTPLUG=y
 CONFIG_TEGRA_DYNAMIC_PWRDET=y
+CONFIG_RIL=y
 CONFIG_TEGRA_USB_MODEM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER2=m
@@ -53,7 +49,6 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
 CONFIG_HIGHMEM=y
-CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_CPU_FREQ=y
@@ -176,11 +171,14 @@ CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_BLUESLEEP=y
+# CONFIG_BT_WILINK is not set
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_WEXT is not set
 CONFIG_CFG80211_ALLOW_RECONNECT=y
+# CONFIG_LIB80211 is not set
+# CONFIG_MAC80211 is not set
 CONFIG_RFKILL=y
 CONFIG_CAIF=y
 # CONFIG_FIRMWARE_IN_KERNEL is not set
@@ -189,12 +187,12 @@ CONFIG_MISC_DEVICES=y
 CONFIG_AD525X_DPOT=y
 CONFIG_AD525X_DPOT_I2C=y
 # CONFIG_ANDROID_PMEM is not set
-CONFIG_ICS932S401=y
 CONFIG_APDS9802ALS=y
 CONFIG_SENSORS_NCT1008=y
 CONFIG_UID_STAT=y
 CONFIG_BCM4329_RFKILL=y
 CONFIG_TEGRA_CRYPTO_DEV=y
+# CONFIG_TI_ST is not set
 #
 # Motion Sensors Support
 #
@@ -236,6 +234,9 @@ CONFIG_BCMDHD_FW_DIR="/system/vendor/firmware"
 CONFIG_BCMDHD_NVRAM_DIR="/system/etc"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/nvram_4329.txt"
 CONFIG_BCMDHD_WIFI_CONTROL_FUNC=y
+# CONFIG_WL12XX_MENU is not set
+# CONFIG_WL12XX is not set
+# CONFIG_WL12XX_SDIO is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC95XX=y
 # CONFIG_USB_NET_NET1080 is not set
@@ -250,8 +251,11 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_MPPE=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
+CONFIG_SLIP=y
 # CONFIG_INPUT_MOUSEDEV is not set
 CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
@@ -268,6 +272,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MT_T9=y
 CONFIG_TOUCHSCREEN_ELAN_TF_3K=y
+# CONFIG_TOUCHSCREEN_RM31080A is not set
+# CONFIG_TOUCHSCREEN_SYN_RMI4_SPI is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
@@ -310,6 +316,7 @@ CONFIG_MFD_RICOH583=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
+CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MAX77663=y
 CONFIG_REGULATOR_TPS6586X=y
 CONFIG_REGULATOR_TPS6591X=y
@@ -368,6 +375,7 @@ CONFIG_SND_SOC_MAX98088 is not set
 CONFIG_DSP_FM34=y
 CONFIG_HEADSET_FUNCTION=y
 CONFIG_SND_SOC_TEGRA_TLV320AIC326X=y
+# CONFIG_SND_SOC_TEGRA_RT5640 is not set
 CONFIG_HID_SONY=y
 CONFIG_HID_APPLE=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
@@ -381,9 +389,11 @@ CONFIG_USB_WDM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_LIBUSUAL=y
 CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_PL2303=y
 CONFIG_USB_SERIAL_OPTION=y
 CONFIG_USB_SERIAL_BASEBAND=m
+CONFIG_USB_SERIAL_QUALCOMM=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_G_ANDROID=y
@@ -426,13 +436,13 @@ CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 # CONFIG_DNOTIFY is not set
+CONFIG_ISO9660_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_NFS_FS=y
 CONFIG_ROOT_NFS=y
+# CONFIG_VFAT_FS_DUALNAMES is not set
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 CONFIG_NLS_CODEPAGE_437=y
@@ -443,7 +453,6 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_NLS_UTF8=y
 CONFIG_LOCKUP_DETECTOR=y
-CONFIG_DETECT_HUNG_TASK=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_SPINLOCK is not set
@@ -455,6 +464,7 @@ CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_VM=y
 # CONFIG_RCU_CPU_STALL_DETECTOR is not set
+CONFIG_DYNAMIC_DEBUG=y
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_TWOFISH=y
