--- a/arch/arm/configs/tf700t_cm10_defconfig
+++ b/arch/arm/configs/tf700t_cm10_defconfig
@@ -33,7 +33,7 @@ CONFIG_TEGRA_CLOCK_DEBUG_WRITE=y
 CONFIG_TEGRA_CONVSERVATIVE_GOV_ON_EARLYSUPSEND=y
 CONFIG_USB_HOTPLUG=y
 CONFIG_TEGRA_DYNAMIC_PWRDET=y
-CONFIG_RIL=y
+#CONFIG_RIL=y
 CONFIG_TEGRA_USB_MODEM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER=y
 CONFIG_TEGRA_BB_XMM_POWER2=m
@@ -464,7 +464,7 @@ CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_VM=y
 # CONFIG_RCU_CPU_STALL_DETECTOR is not set
-CONFIG_DYNAMIC_DEBUG=y
+#CONFIG_DYNAMIC_DEBUG=y
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_TWOFISH=y
