--- a/arch/arm/configs/tf700t_cm10_defconfig
+++ b/arch/arm/configs/tf700t_cm10_defconfig
@@ -1189,18 +1189,10 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCM4329=m
-# CONFIG_BCM4329_FIRST_SCAN is not set
-CONFIG_BCM4329_FW_PATH="/system/vendor/firmware/fw_bcm4329.bin"
-CONFIG_BCM4329_NVRAM_PATH="/system/etc/nvram.txt"
-CONFIG_BCM4329_WIFI_CONTROL_FUNC=y
-# CONFIG_BCM4329_DHD_USE_STATIC_BUF is not set
-# CONFIG_BCM4329_HW_OOB is not set
-# CONFIG_BCM4329_OOB_INTR_ONLY is not set
-# CONFIG_BCM4329_GET_CUSTOM_MAC_ENABLE is not set
-CONFIG_BCMDHD=m
+# CONFIG_BCM4329 is not set
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_DIR="/system/vendor/firmware"
-CONFIG_BCMDHD_NVRAM_PATH="/data/misc/wifi/nvram.txt"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/nvram_4329.txt"
 CONFIG_BCMDHD_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD_HW_OOB=y
 # CONFIG_HOSTAP is not set
