--- a/arch/arm/configs/tf700t_cm10_defconfig
+++ b/arch/arm/configs/tf700t_cm10_defconfig
@@ -1930,7 +1930,8 @@ CONFIG_FB_MODE_HELPERS=y
 CONFIG_TEGRA_GRHOST=y
 CONFIG_TEGRA_DC=y
 CONFIG_FB_TEGRA=y
-CONFIG_TEGRA_DC_EXTENSIONS=y
+CONFIG_TEGRA_OVERLAY=y
+#CONFIG_TEGRA_DC_EXTENSIONS=y
 CONFIG_TEGRA_NVMAP=y
 CONFIG_NVMAP_RECLAIM_UNPINNED_VM=y
 CONFIG_NVMAP_ALLOW_SYSMEM=y
