--- a/arch/arm/configs/tf700t_cm10_defconfig
+++ b/arch/arm/configs/tf700t_cm10_defconfig
@@ -879,21 +879,15 @@ CONFIG_BT_BLUESLEEP=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT=y
-CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
-CONFIG_WEXT_PRIV=y
-CONFIG_CFG80211=m
-# CONFIG_NL80211_TESTMODE is not set
+CONFIG_CFG80211=y
+CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
 CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
-CONFIG_CFG80211_WEXT=y
-CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
-# CONFIG_CFG80211_ALLOW_RECONNECT is not set
+CONFIG_CFG80211_ALLOW_RECONNECT=y
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
@@ -1189,18 +1183,10 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCM4329=m
-# CONFIG_BCM4329_FIRST_SCAN is not set
-CONFIG_BCM4329_FW_PATH="/system/vendor/firmware/fw_bcm4329.bin"
-CONFIG_BCM4329_NVRAM_PATH="/system/etc/nvram.txt"
-CONFIG_BCM4329_WIFI_CONTROL_FUNC=y
-# CONFIG_BCM4329_DHD_USE_STATIC_BUF is not set
-# CONFIG_BCM4329_HW_OOB is not set
-# CONFIG_BCM4329_OOB_INTR_ONLY is not set
-# CONFIG_BCM4329_GET_CUSTOM_MAC_ENABLE is not set
-CONFIG_BCMDHD=m
+# CONFIG_BCM4329 is not set
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_DIR="/system/vendor/firmware"
-CONFIG_BCMDHD_NVRAM_PATH="/data/misc/wifi/nvram.txt"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/nvram_4329.txt"
 CONFIG_BCMDHD_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD_HW_OOB=y
 # CONFIG_HOSTAP is not set
