Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [project]
 	state = active
-[access "refs/heads/*"]
+[access "refs/*"]
 	owner = group Administrators
 	create = group Transformer Team
 	push = group Transformer Team
