--- a/project.config
+++ b/project.config
@@ -3,7 +3,8 @@
 [access "refs/*"]
 	owner = group Administrators
 	create = group Transformer Team
-	push = group Transformer Team
+	push = +force group Transformer Team
 	label-Code-Review = -2..+2 group Transformer Team
 	label-Verified = -1..+1 group Transformer Team
 	submit = group Transformer Team
+	forgeCommitter = group Transformer Team
