--- a/arch/arm/configs/cyanogenmod_cardhu_defconfig
+++ b/arch/arm/configs/cyanogenmod_cardhu_defconfig
@@ -1265,7 +1265,8 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 CONFIG_USB_NET_RNDIS_WLAN=y
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCM4330=y
+# CONFIG_BCM4330 is not set
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_DIR="/system/vendor/firmware"
 CONFIG_BCMDHD_NVRAM_PATH="/data/misc/wifi/nvram.txt"
 CONFIG_BCMDHD_WIFI_CONTROL_FUNC=y
