cardhu: set default scheduler to row
Change-Id: I6ef7b151b5144d0cb098a8db9924170cebc9acb0

--- a/arch/arm/configs/cyanogenmod_cardhu_defconfig
+++ b/arch/arm/configs/cyanogenmod_cardhu_defconfig
@@ -187,8 +187,8 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_ROW="row"
+# CONFIG_DEFAULT_IOSCHED is not set
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
