Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	state = active
 [access "refs/*"]
 	owner = group Administrators
 	create = group Transformer Team
@@ -8,3 +7,5 @@
 	label-Verified = -1..+1 group Transformer Team
 	submit = group Transformer Team
 	forgeCommitter = group Transformer Team
+[submit]
+	action = rebase if necessary
